--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "snowpack build"
   },
   "dependencies": {
-    "svelte": "^3.31.0",
+    "svelte": "^3.31.2",
     "svelte-loader": "^2.13.6",
     "svelte-preprocess": "^4.6.1",
     "interactjs": "^1.10.1",
@@ -31,14 +31,15 @@
     "@pixi/graphics": "5.3.7",
     "pixi-live2d-display": "^0.3.0-beta.2",
     "peerjs": "^1.3.1",
-    "@tensorflow/tfjs-core": "^2.8.2",
-    "@tensorflow/tfjs-converter": "^2.8.2",
-    "@tensorflow/tfjs-backend-webgl": "^2.8.2",
-    "@tensorflow/tfjs-backend-wasm": "^2.8.2",
+    "@tensorflow/tfjs-core": "^2.8.4",
+    "@tensorflow/tfjs-converter": "^2.8.4",
+    "@tensorflow/tfjs-backend-webgl": "^2.8.4",
+    "@tensorflow/tfjs-backend-wasm": "^2.8.4",
     "@tensorflow-models/face-landmarks-detection": "^0.0.2",
-    "svelte-hmr": "^0.12.2",
+    "svelte-hmr": "^0.12.3",
     "parcel": "^1.12.4",
-    "jszip": "^3.5.0"
+    "jszip": "^3.5.0",
+    "@pwabuilder/pwaupdate": "^0.2.0"
   },
   "devDependencies": {
     "snowpack": "^2.18.5",
