--- a/package.json
+++ b/package.json
@@ -24,22 +24,23 @@
     "@pixi/app": "5.3.7",
     "@pixi/ticker": "5.3.7",
     "@pixi/interaction": "5.3.7",
-    "@pixi/loaders": "5.3.7",
+    "@pixi/loaders": "^5.3.7",
     "@pixi/utils": "5.3.7",
     "@pixi/math": "5.3.7",
     "@pixi/display": "5.3.7",
     "@pixi/graphics": "5.3.7",
     "pixi-live2d-display": "^0.3.0-beta.2",
     "peerjs": "^1.3.1",
-    "@tensorflow/tfjs-core": "^2.8.4",
-    "@tensorflow/tfjs-converter": "^2.8.4",
-    "@tensorflow/tfjs-backend-webgl": "^2.8.4",
+    "@tensorflow/tfjs-core": "^2.8.5",
+    "@tensorflow/tfjs-converter": "^2.8.5",
+    "@tensorflow/tfjs-backend-webgl": "^2.8.5",
     "@tensorflow/tfjs-backend-wasm": "^2.8.4",
     "@tensorflow-models/face-landmarks-detection": "^0.0.2",
     "svelte-hmr": "^0.12.3",
     "parcel": "^1.12.4",
     "jszip": "^3.5.0",
-    "@pwabuilder/pwaupdate": "^0.2.0"
+    "@pwabuilder/pwaupdate": "^0.2.0",
+    "pixi-apngandgif": "^1.0.2"
   },
   "devDependencies": {
     "snowpack": "^2.18.5",
