--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "build": "snowpack build"
   },
   "dependencies": {
-    "svelte": "^3.32.0",
-    "svelte-loader": "^3.0.0",
-    "svelte-preprocess": "^4.6.5",
+    "svelte": "^3.31.2",
+    "svelte-loader": "^2.13.6",
+    "svelte-preprocess": "^4.6.1",
     "interactjs": "^1.10.1",
     "@pixi/core": "5.3.7",
     "@pixi/sprite": "5.3.7",
@@ -29,19 +29,18 @@
     "@pixi/math": "5.3.7",
     "@pixi/display": "5.3.7",
     "@pixi/graphics": "5.3.7",
-    "pixi-live2d-display": "^0.3.1",
+    "pixi-live2d-display": "^0.3.0",
     "peerjs": "^1.3.1",
     "@tensorflow/tfjs-core": "^2.8.5",
     "@tensorflow/tfjs-converter": "^2.8.5",
     "@tensorflow/tfjs-backend-webgl": "^2.8.5",
-    "@tensorflow/tfjs-backend-wasm": "^3.0.0",
+    "@tensorflow/tfjs-backend-wasm": "^2.8.4",
     "@tensorflow-models/face-landmarks-detection": "^0.0.2",
-    "svelte-hmr": "^0.12.4",
+    "svelte-hmr": "^0.12.3",
     "parcel": "^1.12.4",
     "jszip": "^3.5.0",
     "@pwabuilder/pwaupdate": "^0.2.0",
-    "@jaames/iro": "^5.3.1",
-    "localforage": "^1.9.0"
+    "pixi-apngandgif": "^1.0.2"
   },
   "devDependencies": {
     "snowpack": "^2.18.5",
