--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "Kalidoface",
     "background_color": "#000000",
     "theme_color": "#000000",
-    "display": "standalone",
+    "display": "fullscreen",
     "start_url": "./?source=pwa",
     "icons": [
         {
