--- a/package.json
+++ b/package.json
@@ -15,34 +15,27 @@
     "build": "snowpack build"
   },
   "dependencies": {
-    "svelte": "^3.32.0",
-    "svelte-loader": "^3.0.0",
-    "svelte-preprocess": "^4.6.5",
-    "interactjs": "^1.10.1",
-    "@pixi/core": "5.3.7",
-    "@pixi/sprite": "5.3.7",
-    "@pixi/app": "5.3.7",
-    "@pixi/ticker": "5.3.7",
-    "@pixi/interaction": "5.3.7",
-    "@pixi/loaders": "^5.3.7",
-    "@pixi/utils": "5.3.7",
-    "@pixi/math": "5.3.7",
-    "@pixi/display": "5.3.7",
-    "@pixi/graphics": "5.3.7",
-    "pixi-live2d-display": "^0.3.1",
-    "peerjs": "^1.3.1",
+    "svelte": "^3.38.3",
+    "svelte-loader": "^3.1.2",
+    "svelte-preprocess": "^4.7.3",
+    "interactjs": "^1.10.11",
+    "peerjs": "^1.3.2",
     "@tensorflow/tfjs-core": "^2.8.5",
     "@tensorflow/tfjs-converter": "^2.8.5",
     "@tensorflow/tfjs-backend-webgl": "^2.8.5",
     "@tensorflow/tfjs-backend-wasm": "^3.0.0",
     "@tensorflow-models/face-landmarks-detection": "^0.0.2",
-    "svelte-hmr": "^0.12.4",
+    "svelte-hmr": "^0.14.3",
     "parcel": "^1.12.4",
     "jszip": "^3.5.0",
     "@pwabuilder/pwaupdate": "^0.2.0",
-    "@jaames/iro": "^5.3.1",
+    "@jaames/iro": "^5.5.0",
     "localforage": "^1.9.0",
-    "@pixi/filter-color-matrix": "^5.3.7"
+    "three": "^0.129.0",
+    "@pixiv/three-vrm": "^0.6.4",
+    "@mediapipe/holistic": "^0.4.1625245411",
+    "@mediapipe/drawing_utils": "^0.3.1620248257",
+    "three-ik": "^0.1.0"
   },
   "devDependencies": {
     "snowpack": "^2.18.5",
@@ -51,6 +44,10 @@
     "snowpack-plugin-rollup-bundle": "^0.3.3",
     "@snowpack/plugin-webpack": "^2.1.3",
     "rollup-plugin-node-polyfills": "^0.1.2",
-    "null": "^2.0.0"
+    "null": "^2.0.0",
+    "prettier-plugin-svelte": "^2.1.6"
+  },
+  "glitch": {
+    "projectType": "generated_static"
   }
 }
