--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "svelte-preprocess": "^4.7.3",
     "interactjs": "^1.10.11",
     "peerjs": "^1.3.2",
-    "@tensorflow/tfjs-core": "^3.8.0",
-    "@tensorflow/tfjs-converter": "^3.8.0",
-    "@tensorflow/tfjs-backend-webgl": "^3.8.0",
-    "@tensorflow/tfjs-backend-wasm": "^3.7.0",
+    "@tensorflow/tfjs-core": "^3.11.0",
+    "@tensorflow/tfjs-converter": "^3.11.0",
+    "@tensorflow/tfjs-backend-webgl": "^3.11.0",
+    "@tensorflow/tfjs-backend-wasm": "^3.9.0",
     "@tensorflow-models/face-landmarks-detection": "^0.0.3",
     "svelte-hmr": "^0.14.3",
     "parcel": "^1.12.4",
@@ -31,11 +31,10 @@
     "@pwabuilder/pwaupdate": "^0.2.0",
     "@jaames/iro": "^5.5.0",
     "localforage": "^1.9.0",
-    "three": "^0.129.0",
-    "@pixiv/three-vrm": "^0.6.4",
-    "@mediapipe/holistic": "^0.4.1628005088",
+    "@mediapipe/holistic": "^0.5.1635989137",
     "@mediapipe/drawing_utils": "^0.3.1620248257",
-    "three-ik": "^0.1.0"
+    "@mediapipe/face_mesh": "^0.4.1633559619",
+    "kalidokit": "^1.0.1"
   },
   "devDependencies": {
     "snowpack": "^2.18.5",
